  rb_proc_exec_n : internal function. no replacement.
  rb_run_exec_options : internal function. no replacement.
  rb_run_exec_options_err : internal function. no replacement.
  rb_thread_blocking_region -> rb_thread_call_without_gvl family
  rb_thread_polling -> rb_thread_wait_for
  rb_big2str0 : internal function. no replacement.
  rb_big2ulong_pack -> rb_integer_pack
  rb_gc_set_params : internal function. no replacement.
  rb_io_mode_flags -> rb_io_modestr_fmode
  rb_io_modenum_flags -> rb_io_oflags_fmode

* struct RBignum is hidden.  [Feature #6083]
  Use rb_integer_pack and rb_integer_unpack instead.

* struct RRational is hidden.  [Feature #9513]
  Use rb_rational_num and rb_rational_den instead.

* rb_big_new and rb_big_resize takes a size_t instead of long.

* rb_num2long returns a long instead of SIGNED_VALUE.

* rb_num2ulong returns an unsigned long instead of VALUE.

* st hash table uses power-of-two sizes for speed [Feature #9425].
  Lookups are 10-25% faster if using appropriate hash functions.
  However, weaknesses in hash distribution can no longer be masked
  by prime number-sized tables, so extensions may need to tweak
  hash functions to ensure good distribution.

* rb_sym2str() added. This is almost same as `rb_id2str(SYM2ID(sym))`
  but not pinning a dynamic symbol.

* rb_str_cat_cstr() added. This is same as `rb_str_cat2()`.

* `rb_str_substr()` and `rb_str_subseq()` now share middle of a string,
  but not only the end of a string.  Therefore, result strings may not
  be NUL-terminated, `StringValueCStr()` is needed calling to obtain a
  NUL-terminated C string.

* rb_tracepoint_new() supports new internal events accessible only from C:
  * RUBY_INTERNAL_EVENT_GC_ENTER
  * RUBY_INTERNAL_EVENT_GC_EXIT
    r47528

=== Build system updates

* jemalloc is optionally supported via `./configure --with-jemalloc`
  jemalloc may be suitable when system malloc is slow or prone
  to fragmentation.  [Feature #9113]